<resources>
    <string name="app_name">MSH</string>
    <string name="main_text_zero">Привет, стартапер!</string>
    <string name="second_text_zero">Мы умеем работать со стартапами на ранней стадии и помогаем компаниям расти быстрее с помощью уникального доступа к возможностям экосистемы МТС.</string>
    <string name="text_continue">Продолжить</string>
    <string name="text_splash_screen">Добро пожаловать!</string>
    <string name="registration">Регистрация</string>
    <string name="text_minute_reg">Это займет всего минуту.</string>
    <string name="text_name">Имя</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_second_name">Отчество</string>
    <string name="text_number_phone">Телефон</string>
    <string name="text_counrty">Страна</string>
    <string name="text_email">Email</string>
    <string name="text_password">Пароль</string>
    <string name="text_add_image">Добавить изображение</string>
    <string name="text_create_account">Создать аккаунт</string>
    <string name="text_or">или</string>
    <string name="text_and">и</string>
    <string name="text_google_registration">Войдите через Google</string>
    <string name="text_entry">Вход</string>
    <string name="text_entry_funny">Рады видеть вас снова!</string>
    <string name="text_entry_button">Войти</string>
    <string name="text_reg_question">Уже зарегистрированы?</string>
    <string name="text_entry_in_account">Войти в аккаунт</string>
    <string name="text_out_account">Выйти</string>
    <string name="text_startup_participation">Заявка на участие</string>
    <string name="text_usludi">Услуги</string>
    <string name="text_startup_info">Информация о стартапе</string>
    <string name="text_startup_participation_program">Заявка на программу</string>
    <string name="text_name_project">Название проекта</string>
    <string name="text_name_website">Сайт проекта</string>
    <string name="text_readiness_stage">Стадия готовности</string>
    <string name="text_description_project">Описание проекта</string>
    <string name="text_presentation_project">Презентация проекта</string>
    <string name="text_dop_materials">Доп. материалы</string>
    <string name="text_button_submit">Подать заявку</string>
    <string name="text_events">Мероприятия</string>
    <string name="text_select_users">Выбор пользователя</string>
    <string name="text_description_events">Описание мероприятия:</string>
    <string name="text_tasks_events">Цели и задачи:</string>
    <string name="text_participants_events">Участники: \n • Mobile, WEB, data science, etc</string>
    <string name="text_equipment_events">Оборудование на площадке:</string>
    <string name="text_date_events">Дата:</string>
    <string name="text_time_events">Время(МСК):</string>
    <string name="text_dopinfo_events">Дополнительная информация:</string>
    <string name="text_banner_events">Баннер(330*180):</string>
    <string name="text_accept">Я принимаю Правила использования и Политику конфиденциальности</string>
    <string name="text_under_button_application">• коммерческий пилот/5G инкубация</string>
    <string name="text_under_button_stage">• идея, разработка идеи, MVP(не готов к продаже), MVP(с продажами), готовый продукт (уже продается)</string>
    <string name="text_events_area">Площадка: \n • Москва \n • Санкт-Петербург \n • Нижний Новгород \n • Новосибирск</string>
    <string name="text_main_profile">Профиль</string>
    <string name="text_main_message">Чат</string>
    <string name="text_name_events">Название проекта:</string>
    <string name="text_main_bonus">Главная страница</string>
    <string name="text_edit">Редактировать</string>
    <string name="text_your_achievements">Ваши достижения: </string>
    <string name="text_communities">Сообщества</string>
    <string name="text_stuff">Стафф</string>
    <string name="text_mts_events">Командировки от МТС</string>
    <string name="text_finance">Финансовая аналитика</string>
    <string name="text_my_events">Услуги от МТС</string>
    <string name="text_up_komp">Повышение компетенций</string>
    <string name="text_error_email">Введите корректный e-mail</string>
    <string name="text_error_password">Минимальный размер 8 символов</string>
    <string name="text_error_email_double">Пользователь с такой почтой уже существует</string>
    <string name="text_title_startups">Стартапы</string>
    <string name="text_startup_empty">Стартапов ещё нет. \n Или они на обработке.</string>
    <string name="text_events_empty">Мероприятий ещё нет. \n Или они на обработке.</string>
    <string name="button_add_startup">Добавить стартап</string>
    <string name="text_title_finance">Финансовая аналитика</string>
    <string name="text_add_events">Создать мероприятие</string>
    <string name="text_button_more">Подробнее</string>
</resources>