<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EntryActivity"
    android:background="@color/color_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-65dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageButton
                    android:id="@+id/imageButtonBackEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:baselineAligned="false"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingRight="48dp"
                    android:text="@string/text_entry"
                    android:textColor="@color/color_text_main"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/color_text_second"
                    android:text="@string/text_entry_funny"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:layout_marginHorizontal="25dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editEmailEntry"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/text_email"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_for_edit"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/open_sans"
                    android:textStyle="bold"
                    android:maxLength="50"
                    android:paddingVertical="10dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"/>

                <TextView
                    android:id="@+id/textErrorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/color_main"
                    android:text="@string/text_error_email"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans"
                    android:layout_gravity="left"
                    android:layout_marginLeft="8dp"
                    android:layout_marginHorizontal="25dp"
                    android:padding="3dp"
                    android:layout_marginTop="3dp"
                    android:visibility="gone"
                    android:foreground="?attr/selectableItemBackground"/>

                <EditText
                    android:id="@+id/editPasswordEntry"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/text_password"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_for_edit"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/open_sans"
                    android:textStyle="bold"
                    android:layout_marginTop="17dp"
                    android:password="true"
                    android:maxLength="25"
                    android:paddingVertical="10dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"
                    tools:ignore="Deprecated" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEntrySign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:backgroundTint="@color/color_main"
                    android:fontFamily="@font/open_sans"
                    android:padding="15dp"
                    android:text="@string/text_entry_button"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:cornerRadius="35dp"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceBody2"/>

                <ProgressBar
                    android:id="@+id/progressEntry"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>

        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>